tests/baselines/reference/asyncFunctionDeclaration6_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncFunctionDeclaration6_es5.ts(1,24): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncFunctionDeclaration6_es5.ts(1,29): error TS1109: Expression expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncFunctionDeclaration6_es5.ts (2 errors) ====
    async function foo(a = await): Promise<void> {
                           ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                ~
!!! error TS1109: Expression expected.
    }